[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/godot_rl_agents/sensors/sensors_3d/RGBCameraSensor3D.gd" type="Script" id=1]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("SubViewport")

[node name="RGBCameraSensor3D" type="Node3D"]
script = ExtResource( 1 )

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="."]
remote_path = NodePath("../SubViewport/Camera3D")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2( 32, 32 )
render_target_update_mode = 3

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
near = 0.5

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="Control"]
offset_left = 1096.0
offset_top = 534.0
offset_right = 1114.0
offset_bottom = 552.0
scale = Vector2( 10, 10 )
color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraTexture" type="Sprite2D" parent="Control/TextureRect"]
texture = SubResource( 1 )
offset = Vector2( 9, 9 )
flip_v = true
